// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextSkeleton /> should render a text skeleton 1`] = `
.c0 {
  border-radius: 4px;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-animation: jXsTbE .8s linear infinite alternate;
  animation: jXsTbE .8s linear infinite alternate;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  will-change: opacity;
  background-color: #E1E6EB;
  border: 1px solid #E1E6EB;
  display: block;
}

<TextSkeleton
  showSkeleton={true}
  type="body"
>
  <styled.span
    textType="body"
  >
    <span
      className="c0"
    >
      ‌
    </span>
  </styled.span>
</TextSkeleton>
`;

exports[`<TextSkeleton /> should render a text skeleton with set type 1`] = `
.c0 {
  border-radius: 4px;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  font-size: 24px;
  line-height: 32px;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  -webkit-animation: jXsTbE .8s linear infinite alternate;
  animation: jXsTbE .8s linear infinite alternate;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  will-change: opacity;
  background-color: #E1E6EB;
  border: 1px solid #E1E6EB;
  display: block;
}

<TextSkeleton
  showSkeleton={true}
  type="display"
>
  <styled.span
    textType="display"
  >
    <span
      className="c0"
    >
      ‌
    </span>
  </styled.span>
</TextSkeleton>
`;

exports[`<TextSkeleton /> should render a text skeleton with set width 1`] = `
.c0 {
  border-radius: 4px;
  width: 250px;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-animation: jXsTbE .8s linear infinite alternate;
  animation: jXsTbE .8s linear infinite alternate;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  will-change: opacity;
  background-color: #E1E6EB;
  border: 1px solid #E1E6EB;
  display: block;
}

<TextSkeleton
  showSkeleton={true}
  type="body"
  width={250}
>
  <styled.span
    textType="body"
    width="250px"
  >
    <span
      className="c0"
      width="250px"
    >
      ‌
    </span>
  </styled.span>
</TextSkeleton>
`;
